# lab_htcpcp

./: .env  .gitignore  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
config/: config.py
db/: currently_brewing.json  past_coffees.json
dissector/: README.md  htcpcp.lua
log/: coffeepot.log.sample
sample_capture/: coffee_418_406.pcapng  coffee_brew.pcapng  homepage_coffee.pcapng
server/: server_pot.py
webapp/: webapp_coffee.py
webapp/assets/: robots.txt  styles.css
webapp/templates/: base.html  coffeedata.html  error.html  history.html  index.html
webapp/templates/includes/: make_coffee_form.html
webserver/: webserver_coffee.py
webserver/templates/: error.html
