[project]
name = ""
version = "0.0.1"
requires-python = "~=3.10"
dependencies = [
    "flask==2.2.3",
    "pyopenssl==23.1.1",
    "python-dotenv==1.0.0",
    "werkzeug==2.2.3",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
